--- a/src/app/agent-service/devis-cvie/devis-cvie.component.html
+++ b/src/app/agent-service/devis-cvie/devis-cvie.component.html
@@ -1,7 +1,7 @@
 <div class="flex">
   <app-dashbort></app-dashbort>
 
-  <div class="flex-1 mt-20 ml-60">
+  <div class="flex-1 mt-20 ml-0 mr-70">
   <div class="max-w-4xl mx-auto bg-white rounded-lg shadow-md overflow-hidden">
     <!-- Header -->
     <div class="bg-teal-800 py-4 px-6">
