--- a/src/app/assure/devis-avie/devis-avie.component.html
+++ b/src/app/assure/devis-avie/devis-avie.component.html
@@ -107,8 +107,10 @@
         <div class="space-y-4">
           <div class="flex items-start">
             <div class="flex items-center h-5">
-              <input id="garantieDeces" formControlName="garantieDeces" type="checkbox"
-                     class="focus:ring-teal-500 h-4 w-4 text-teal-600 border-gray-300 rounded">
+              <input id="garantieDeces" formControlName="garantieDeces" type="checkbox" checked [disabled]="isDisabled"
+              class="focus:ring-teal-500 h-4 w-4 text-teal-600 border-gray-300 rounded">
+
+
             </div>
             <div class="ml-3 text-sm">
               <label for="garantieDeces" class="font-medium text-gray-700">Décès</label>
