--- a/src/app/agent-service/contrat-list/contrat-list.component.html
+++ b/src/app/agent-service/contrat-list/contrat-list.component.html
@@ -1,7 +1,7 @@
 <div class="flex">
   <app-dashbort></app-dashbort>
 
-  <div class="flex-1 mt-20 ml-60">
+  <div class="flex-1 mt-20 ml-0 mr-70">
     <!-- Contenu principal centré -->
     <main class="flex-1 ml-60 bg-gray-50 p-6">
       <div class="max-w-6xl mx-auto">
