--- a/src/app/agent-service/renouvellement-ca/renouvellement-ca.component.html
+++ b/src/app/agent-service/renouvellement-ca/renouvellement-ca.component.html
@@ -1,7 +1,7 @@
 <div class="flex">
   <app-dashbort></app-dashbort>
 
-  <div class="flex-1 mt-20 ml-60">
+  <div class="flex-1 mt-20 ml-0 mr-70">
 <main class="flex-1 ml-60">
   <div class="max-w-6xl mx-auto p-8">
     <div class="relative bg-white flex flex-col items-center rounded-2xl shadow-teal-100 shadow-lg max-w-md w-full p-8">
